[package]
name = "wasm_demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "File", "FileList", "FileReader", "HtmlElement", "Event",
    "DragEvent", "DataTransfer", "Window", "Document",
    "WebSocket", "console", "MessageEvent"
] }
wasm-bindgen-futures = "0.4.50"
